adding new products

--- a/products.html
+++ b/products.html
@@ -147,15 +147,17 @@
                 srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520990/apero/products/new%2003.10/mobile/bamboo_milk_mob_1x-min_ji1igw.png 1x,
                 https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520992/apero/products/new%2003.10/mobile/bamboo_milk_mob_2x-min_dpq8h6.png 2x"
                 media="(max-width: 743px)" />
-              <img class="image__baget"
+              <img class="product__list-image"
                 src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520990/apero/products/new%2003.10/mobile/bamboo_milk_mob_1x-min_ji1igw.png"
                 alt="production" />
             </picture>
             <p class="subtitle product__list-subtitle">Трубочки бамбукові тростини зі смаком молока</p>
             <div class="product__text-container">
               <p class="text product__list-text">Вага: 200 г</p>
-              <p class="text product__list-text">Фасування:  шт</p>
+              <p class="text product__list-text">Фасування: 18 шт</p>
             </div>
+            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                 alt="new" class="image__new__label">
           </li>
 
 
@@ -169,15 +171,17 @@
                 srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520988/apero/products/new%2003.10/mobile/bamboo_choc_mob_1x-min_eeso45.png 1x,
                 https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520989/apero/products/new%2003.10/mobile/bamboo_choc_mob_2x-min_olosm0.png 2x"
                 media="(max-width: 743px)" />
-              <img class="image__baget"
+              <img class="product__list-image"
                 src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520988/apero/products/new%2003.10/mobile/bamboo_choc_mob_1x-min_eeso45.png"
                 alt="production" />
             </picture>
             <p class="subtitle product__list-subtitle">Трубочки бамбукові тростини зі смаком шоколаду</p>
             <div class="product__text-container">
               <p class="text product__list-text">Вага: 200 г</p>
-              <p class="text product__list-text">Фасування: шт</p>
+              <p class="text product__list-text">Фасування:18 шт</p>
             </div>
+            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                 alt="new" class="image__new__label">
           </li>
 
           <li class="list product__list popcorn__list">
@@ -190,15 +194,17 @@
                 srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211040/apero/products/new%2003.10/mobile/popcorn_sour_mob-1x-min_uqzmmt.png 1x,
                         https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211041/apero/products/new%2003.10/mobile/popcorn_sour_mob-2x-min_mobcux.png 2x"
                 media="(max-width: 743px)" />
-              <img class="image__baget"
+              <img class="product__list-image"
                 src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211040/apero/products/new%2003.10/mobile/popcorn_sour_mob-1x-min_uqzmmt.png"
                 alt="popcorn" />
             </picture>
             <p class="subtitle product__list-subtitle">Готовий попкорн Snex зі смаком зелені та сметани</p>
             <div class="product__text-container">
-              <p class="text product__list-text">Вага:  г</p>
-              <p class="text product__list-text">Фасування: шт</p>
+              <p class="text product__list-text">Вага: 60 г</p>
+              <p class="text product__list-text">Фасування: 14 шт</p>
             </div>
+            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                 alt="new" class="image__new__label">
           </li>
 
           <li class="list product__list popcorn__list">
@@ -211,15 +217,17 @@
                 srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211044/apero/products/new%2003.10/mobile/popcorn_sweet_mob-1x-min_bimwso.png 1x,
                         https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211045/apero/products/new%2003.10/mobile/popcorn_sweet_mob-2x-min_fctrem.png 2x"
                 media="(max-width: 743px)" />
-              <img class="image__baget"
+              <img class="product__list-image"
                 src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211044/apero/products/new%2003.10/mobile/popcorn_sweet_mob-1x-min_bimwso.png"
                 alt="popcorn" />
             </picture>
             <p class="subtitle product__list-subtitle">Готовий попкорн Snex із солодким смаком</p>
             <div class="product__text-container">
-              <p class="text product__list-text">Вага: г</p>
-              <p class="text product__list-text">Фасування: шт</p>
+              <p class="text product__list-text">Вага: 70 г</p>
+              <p class="text product__list-text">Фасування: 14 шт</p>
             </div>
+            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                 alt="new" class="image__new__label">
           </li>
 
           <li class="list product__list popcorn__list">
@@ -232,17 +240,113 @@
                 srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211038/apero/products/new%2003.10/mobile/popcorn_becon_mob-1x-min_veaurv.png 1x,
                         https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211038/apero/products/new%2003.10/mobile/popcorn_becon_mob-2x-min_cbkiwd.png 2x"
                 media="(max-width: 743px)" />
-              <img class="image__baget"
+              <img class="product__list-image"
                 src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211038/apero/products/new%2003.10/mobile/popcorn_becon_mob-1x-min_veaurv.png"
                 alt="popcorn" />
             </picture>
             <p class="subtitle product__list-subtitle">Готовий попкорн Snex зі смаком бекону</p>
             <div class="product__text-container">
-              <p class="text product__list-text">Вага: г</p>
-              <p class="text product__list-text">Фасування: шт</p>
+              <p class="text product__list-text">Вага: 60 г</p>
+              <p class="text product__list-text">Фасування: 14 шт</p>
             </div>
+            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                 alt="new" class="image__new__label">
           </li>
 
+            <li class="list product__list corn__list">
+              <picture>
+                <source
+                  srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518641/apero/products/new%2003.10/desktop/superhero_desk_1x-min_zboybs.png 1x,
+                          https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518642/apero/products/new%2003.10/desktop/superhero_desk_2x-min_squhpv.png 2x"
+                  media="(min-width: 744px)" />
+                <source
+                  srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521009/apero/products/new%2003.10/mobile/superhero_mob_1x-min_rodx5o.png 1x,
+                          https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521010/apero/products/new%2003.10/mobile/superhero_mob_2x-min_v2lsww.png 2x"
+                  media="(max-width: 743px)" />
+                <img class="image__corn__constructor"
+                  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521009/apero/products/new%2003.10/mobile/superhero_mob_1x-min_rodx5o.png"
+                  alt="popcorn" />
+              </picture>
+              <p class="subtitle product__list-subtitle">Кукурудзяні палички з іграшкою "Супергерої"</p>
+              <div class="product__text-container">
+                <p class="text product__list-text">Вага: 100 г</p>
+                <p class="text product__list-text">Фасування: 10 шт</p>
+              </div>
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                   alt="new" class="image__new__label">
+            </li>
+
+
+            <li class="list product__list corn__list">
+              <picture>
+                <source
+                  srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518639/apero/products/new%2003.10/desktop/princes_desk_1x-min_pwpnlb.png 1x,
+                          https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518641/apero/products/new%2003.10/desktop/princes_desk_2x-min_viat3c.png 2x"
+                  media="(min-width: 744px)" />
+                <source
+                  srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521005/apero/products/new%2003.10/mobile/princes_mob_1x-min_ehqn4d.png 1x,
+                          https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521007/apero/products/new%2003.10/mobile/princes_mob_2x-min_psqdqs.png 2x"
+                  media="(max-width: 743px)" />
+                <img class="image__corn__constructor"
+                  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521005/apero/products/new%2003.10/mobile/princes_mob_1x-min_ehqn4d.png"
+                  alt="popcorn" />
+              </picture>
+              <p class="subtitle product__list-subtitle">Кукурудзяні палички з іграшкою "Модні принцеси"</p>
+              <div class="product__text-container">
+                <p class="text product__list-text">Вага: 100 г</p>
+                <p class="text product__list-text">Фасування: 10 шт</p>
+              </div>
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                   alt="new" class="image__new__label">
+            </li>
+
+          <li class="list product__list corn__list">
+            <picture>
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518632/apero/products/new%2003.10/desktop/constructor_boy_desk_1x-min_fytawt.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518634/apero/products/new%2003.10/desktop/constructor_boy_desk_2x-min_jvjz8k.png 2x"
+                media="(min-width: 744px)" />
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521009/apero/products/new%2003.10/mobile/superhero_mob_1x-min_rodx5o.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521010/apero/products/new%2003.10/mobile/superhero_mob_2x-min_v2lsww.png 2x"
+                media="(max-width: 743px)" />
+              <img class="image__corn__constructor"
+                src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759521009/apero/products/new%2003.10/mobile/superhero_mob_1x-min_rodx5o.png"
+                alt="popcorn" />
+            </picture>
+            <p class="subtitle product__list-subtitle">Кукурудзяні палички "Конструктор" для хлопчиків</p>
+            <div class="product__text-container">
+              <p class="text product__list-text">Вага: 100 г</p>
+              <p class="text product__list-text">Фасування: 10 шт</p>
+            </div>
+            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png"
+                 alt="new" class="image__new__label">
+          </li>
+
+          <li class="list product__list corn__list">
+            <picture>
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518633/apero/products/new%2003.10/desktop/constructor_girl_desk_1x-min_up0aqt.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518635/apero/products/new%2003.10/desktop/constructor_girl_desk_2x-min_fckxa3.png 2x"
+                media="(min-width: 744px)" />
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520995/apero/products/new%2003.10/mobile/constructor_girl_mob_1x-min_xistnv.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520996/apero/products/new%2003.10/mobile/constructor_girl_mob_2x-min_whsgji.png 2x"
+                media="(max-width: 743px)" />
+              <img class="image__corn__constructor"
+                src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520995/apero/products/new%2003.10/mobile/constructor_girl_mob_1x-min_xistnv.png"
+                alt="popcorn" />
+            </picture>
+            <p class="subtitle product__list-subtitle">Кукурудзяні палички "Конструктор" для дівчаток</p>
+            <div class="product__text-container">
+              <p class="text product__list-text">Вага: 100 г</p>
+              <p class="text product__list-text">Фасування: 10 шт</p>
+            </div>
+            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760436672/apero/products/new_hhuyzn.png" 
+                 alt="new" class="image__new__label">
+          </li>
+
+            
           <li class="list product__list suharyky__list">
             <picture>
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243936/apero/products/suharyky/baget-crab-desktop-1x-min_nn9hao.png 1x,
@@ -539,7 +643,7 @@
             </picture>
                 <p class="subtitle product__list-subtitle">Цибулине кільце зі смаком сметани та зелені</p>
                <div class="product__text-container">
-                <p class="text product__list-text">Вага: 50 г</p>
+                <p class="text product__list-text">Вага: 50 г, 100 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
               </div>
            </li>
@@ -590,7 +694,7 @@
             </picture>
                 <p class="subtitle product__list-subtitle">Кільце кальмара</p>
                <div class="product__text-container">
-                <p class="text product__list-text">Вага: 50 г</p>
+                <p class="text product__list-text">Вага: 50 г, 100г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
               </div>
               </li>
