update name of popcorn

--- a/products.html
+++ b/products.html
@@ -198,7 +198,7 @@
                 src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760438421/apero/products/new%2003.10/mobile/popcorn_sour_mob-1x-min_v2jtu0.png"
                 alt="popcorn" />
             </picture>
-            <p class="subtitle product__list-subtitle">Готовий попкорн Snex зі смаком зелені та сметани</p>
+            <p class="subtitle product__list-subtitle">Готовий попкорн Snex зі смаком сметани та зелені</p>
             <div class="product__text-container">
               <p class="text product__list-text">Вага: 60 г</p>
               <p class="text product__list-text">Фасування: 14 шт</p>
