--- a/products.html
+++ b/products.html
@@ -718,8 +718,8 @@
             </picture>
                 <p class="subtitle product__list-subtitle">Кільце кальмара</p>
                <div class="product__text-container">
-                <p class="text product__list-text">Вага: 50 г, 100г</p>
-                <p class="text product__list-text">Фасування: 20 шт</p>
+                <p class="text product__list-text">Вага: 50 г, </br> 100 г</p>
+                <p class="text product__list-text">Фасування: 20 шт, </br>10 шт</p>
               </div>
               </li>
               <li class="list product__list corn__list">
